// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Tag component Should render the correct content 1`] = `
<div
  className="container flex flex--center-y high-contrast-coloring undefined"
>
  <div
    className="tag tag-one-coloring margin-right"
  />
  one
</div>
`;

exports[`Testing Tag component Should render the correct content 2`] = `
<div
  className="container flex flex--center-y high-contrast-coloring undefined"
>
  <div
    className="tag tag-two-coloring margin-right"
  />
  <div>
    Child
  </div>
</div>
`;
